# stixel

./: CMakeLists.txt  README.md  camera.xml  main.cpp  semi_global_matching.cpp  stixel_world.cpp
